# easy-fm

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: error.rs  lib.rs  prelude.rs  rm.rs
src/rm/: ds.rs  meta.rs
src/rm/ds/: s3.rs  safe.rs
src/rm/meta/: local.rs
