[package]
name = "easy_fm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fm-cli"
path = "src/bin/cli.rs"


[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.82"
aws-config = { version = "1.5.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.50.0", features = ["behavior-version-latest"] }
clap = { version = "4.5.17", features = ["cargo"] }
home = "0.5.9"
rusqlite = { version = "0.32.1", features = ["bundled", "array"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }
xcfg-rs = "0.2.4"
